--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,13 +9,12 @@ env:
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -24,13 +23,29 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm run --silent clean
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      - name: Checkout Microsoft's fhir-codegen repository
+        uses: actions/checkout@v5
+        with:
+          repository: microsoft/fhir-codegen
+          path: .fhir-codegen
+
+      - name: Checkout our own repository
+        uses: actions/checkout@v5
+
+      - name: Locate all checked out repository roots
+        run: find . -name ".git" -type d
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v6
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+
+      - name: Build the code
+        run: |
+          npm run --silent clean
+          npm ci
+          npm run build --if-present
+
+      - name: Run tests
+        run: npm test
