--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,10 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Locate all checked out repository roots
-        run: find . -name ".git" -type d
+        run: |
+          find . -name ".git" -type d
+          find . -name ".fhir-codegen"
+          tree /home/runner/work/fhir-typed/fhir-typed/.fhir-codegen
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v6
