Try setting `HOME: ${{ github.workspace }}` for the Github Action step

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,4 +54,5 @@ jobs:
       - name: Run tests
         run: npm test
         env:
-          FHIR_CACHE_DIR: .fhir
+          HOME: ${{ github.workspace }}
+          #FHIR_CACHE_DIR: .fhir
