--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -55,4 +55,5 @@ jobs:
         run: npm test
         env:
           HOME: ${{ github.workspace }}
+          USER_HOME: ${{ github.workspace }}
           #FHIR_CACHE_DIR: .fhir
